--- a/contact-us.html
+++ b/contact-us.html
@@ -201,7 +201,7 @@
                                 <div class="valid-feedback mb-2 ">
                                     ممتاز
                                 </div>
-                                <div class="invalid-feedback mb-2">الرجاء إدخال أسم</div>
+                                <div class="invalid-feedback mb-2">الرجاء إدخال اسم</div>
                             </div>
                             <div class=" position-relative" data-aos="fade-down" data-aos-duration="1000">
                                 <input type="email" class="form-control" id="validationCustom01" value=""
@@ -251,7 +251,9 @@
                                 </a>
                             </div>
                             <div data-aos="fade-up" data-aos-duration="1000">
-                                <a href="tel:+966555881764" class="d-flex align-items-center">
+                                <a target="_blank"
+                                    href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                                    class="d-flex align-items-center">
                                     <img src="imgs/icons/phone-dark.svg" alt="phone-icon" class="img-fluid">
                                     <div class="d-flex flex-column">
                                         <span class="main-title">الجوال</span>
@@ -276,7 +278,7 @@
                                             d="M256 0c17.7 0 32 14.3 32 32V66.7C368.4 80.1 431.9 143.6 445.3 224H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H445.3C431.9 368.4 368.4 431.9 288 445.3V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V445.3C143.6 431.9 80.1 368.4 66.7 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H66.7C80.1 143.6 143.6 80.1 224 66.7V32c0-17.7 14.3-32 32-32zM128 256a128 128 0 1 0 256 0 128 128 0 1 0 -256 0zm128-80a80 80 0 1 1 0 160 80 80 0 1 1 0-160z" />
                                     </svg>
                                     <div class="d-flex flex-column">
-                                        <span class="main-title">الموقع</span>
+                                        <span class="main-title">العنوان</span>
                                         <span class="child-title new-child-title" dir="rtl">المملكة العربية السعودية -
                                             الرياض - مجمع
                                             ليسن فالي- طريق
