--- a/index.html
+++ b/index.html
@@ -1850,11 +1850,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-button-next nav-btn">
-                    <img src="imgs/icons/navigation-left.png" alt="icon">
+                <div class="swiper-button-next nav-btn rotate">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <svg width="800px" height="800px" viewBox="0 0 24 24" fill="f00" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 12H4M4 12L10 6M4 12L10 18" stroke="#1C274C" stroke-width="1.5"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
                 </div>
                 <div class="swiper-button-prev nav-btn">
-                    <img src="imgs/icons/navigation-right.png" alt="icon">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 12H4M4 12L10 6M4 12L10 18" stroke="#1C274C" stroke-width="1.5"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -2026,7 +2035,7 @@
                                 ممتاز
                             </div>
                             <div class="invalid-feedback mt-2">
-                                الرجاء إدخال أسم
+                                الرجاء إدخال اسم
                             </div>
                         </div>
                         <div class="col-12">
