--- a/marketing consulting.html
+++ b/marketing consulting.html
@@ -230,7 +230,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure data-aos="fade-left" data-aos-duration="1000">
-                    <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم3.svg" class="img-fluid" alt="img">
+                    <img src="imgs/icons/new-img.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p" data-aos="fade-right" data-aos-duration="1000">
