--- a/contact-us.html
+++ b/contact-us.html
@@ -328,7 +328,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12 p-0">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -339,7 +339,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-6 col-12 p-0">
+                <div class="col-lg-5 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-4">
