--- a/marketing consulting.html
+++ b/marketing consulting.html
@@ -118,7 +118,7 @@
                                             والحلول
                                             التقنية
                                         </a>
-                                        <a class="d-flex align-items-center dropdown-item"
+                                        <a class="d-flex align-items-center dropdown-item new-active"
                                             href="marketing consulting.html">
                                             <img src="./imgs/ايقونات الخدمات في شريط الهيدر/ايقونة الاستشارات والحلول التسويقية.svg"
                                                 alt="icon">
@@ -289,7 +289,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12 p-0">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -300,7 +300,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-6 col-12 p-0">
+                <div class="col-lg-5 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-4">
