--- a/marketing services.html
+++ b/marketing services.html
@@ -125,7 +125,7 @@
                                                 alt="icon">
                                             الاستشارات والحلول التسويقية
                                         </a>
-                                        <a class="d-flex align-items-center dropdown-item"
+                                        <a class="d-flex align-items-center dropdown-item new-active"
                                             href="marketing services.html">
                                             <img src="./imgs/ايقونات الخدمات في شريط الهيدر/خدمات تسويقية.svg"
                                                 alt="icon">
@@ -2085,7 +2085,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12 p-0">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -2096,7 +2096,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-6 col-12 p-0">
+                <div class="col-lg-5 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-4">
