--- a/financial consulting.html
+++ b/financial consulting.html
@@ -91,7 +91,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a class="d-flex align-items-center dropdown-item"
+                                        <a class="d-flex align-items-center dropdown-item new-active"
                                             href="financial consulting.html">
                                             <img src="./imgs/ايقونات الخدمات في شريط الهيدر/حلول مالية وادارية.svg"
                                                 alt="icon">
@@ -308,7 +308,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12 p-0">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -319,7 +319,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-6 col-12 p-0">
+                <div class="col-lg-5 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-4">
