--- a/index.html
+++ b/index.html
@@ -1931,7 +1931,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12 p-0">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -1942,7 +1942,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-6 col-12 p-0">
+                <div class="col-lg-5 col-md-6 col-12">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-4">
@@ -2005,7 +2005,7 @@
             <div class="modal-content">
                 <button type="button" data-bs-dismiss="modal" aria-label="Close" class="close">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                        viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        viewBox="0 0 384 512">
                         <path
                             d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
                     </svg>
