restructure the files

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">الصفحة الرئيسية</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="who-we-ara.html">من نحن</a>
+                            <a class="nav-link" href="pages/who_we_ara.html">من نحن</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -123,17 +123,19 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="d-flex align-items-center dropdown-item" href="financial consulting.html">
+                                    <a class="d-flex align-items-center dropdown-item"
+                                        href="pages/financial_consulting.html">
                                         <img src="./imgs/ايقونات الخدمات في شريط الهيدر/حلول مالية وادارية.svg"
                                             alt="icon">
                                         الاستشارات والحلول الإدارية و المالية
                                     </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="legal advice.html">
+                                    <a class="d-flex align-items-center dropdown-item" href="pages/legal_advice.html">
                                         <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الاستشارات والحلول القانونية.svg"
                                             alt="icon">
                                         الاستشارات والحلول القانونية
                                     </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="human consulting.html">
+                                    <a class="d-flex align-items-center dropdown-item"
+                                        href="pages/human_consulting.html">
                                         <img src="./imgs/ايقونات الخدمات في شريط الهيدر/استشارات الموارد البشرية.svg"
                                             alt="icon">
                                         استشارات الموارد
@@ -141,24 +143,28 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="d-flex align-items-center dropdown-item" href="technical consulting.html">
+                                    <a class="d-flex align-items-center dropdown-item"
+                                        href="pages/technical_consulting.html">
                                         <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الخدمات التقنية.svg" alt="icon">
                                         الاستشارات
                                         والحلول
                                         التقنية
                                     </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="marketing consulting.html">
+                                    <a class="d-flex align-items-center dropdown-item"
+                                        href="pages/marketing_consulting.html">
                                         <img src="./imgs/ايقونات الخدمات في شريط الهيدر/ايقونة الاستشارات والحلول التسويقية.svg"
                                             alt="icon">
                                         الاستشارات والحلول التسويقية
                                     </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="marketing services.html">
+                                    <a class="d-flex align-items-center dropdown-item"
+                                        href="pages/marketing_services.html">
                                         <img src="./imgs/ايقونات الخدمات في شريط الهيدر/خدمات تسويقية.svg" alt="icon">
                                         الخدمات التسويقية
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="d-flex align-items-center dropdown-item" href="advertising services.html">
+                                    <a class="d-flex align-items-center dropdown-item"
+                                        href="pages/advertising_services.html">
                                         <img src="./imgs/ايقونات الخدمات في شريط الهيدر/التصميم والحملات الاعلانية.svg"
                                             alt="icon">
                                         خدمات التصميم والحملات الإعلانية
@@ -167,13 +173,13 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gallery.html">معرض الأعمال</a>
+                            <a class="nav-link" href="pages/gallery.html">معرض الأعمال</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link" href="blog.html">المدونة</a>
+                            <a class="nav-link" href="pages/blog.html">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact-us.html">اتصل بنا</a>
+                            <a class="nav-link" href="pages/contact_us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#testimonial">
                             <button class="ask-request">اطلب استشارة</button>
@@ -1936,9 +1942,9 @@
                         <h4>عن سلسلة</h4>
                         <ul>
                             <li><a href="index.html">الصفحة الرئيسية</a></li>
-                            <li><a href="who-we-ara.html">من نحن</a></li>
-                            <li><a href="blog.html">المدونة</a></li>
-                            <li><a href="contact-us.html">اتصل بنا</a></li>
+                            <li><a href="pages/who_we_ara.html">من نحن</a></li>
+                            <li><a href="pages/blog.html">المدونة</a></li>
+                            <li><a href="pages/contact_us.html">اتصل بنا</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1947,15 +1953,16 @@
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-4">
                             <ul>
-                                <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
-                                <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
-                                <li><a href="human consulting.html">استشارات الموارد البشرية</a></li>
-                                <li><a href="technical consulting.html">الاستشارات والحلول التقنية</a></li>
+                                <li><a href="pages/financial_consulting.html">الاستشارات والحلول الإدارية والمالية</a>
+                                </li>
+                                <li><a href="pages/legal_advice.html">الاستشارات والحلول القانونية</a></li>
+                                <li><a href="pages/human_consulting.html">استشارات الموارد البشرية</a></li>
+                                <li><a href="pages/technical_consulting.html">الاستشارات والحلول التقنية</a></li>
                             </ul>
                             <ul>
-                                <li><a href="marketing consulting.html">الاستشارات والحلول التسويقية</a></li>
-                                <li><a href="marketing services.html">الخدمات التسويقية</a></li>
-                                <li><a href="advertising services.html">خدمات التصميم والحملات الإعلانية</a></li>
+                                <li><a href="pages/marketing_consulting.html">الاستشارات والحلول التسويقية</a></li>
+                                <li><a href="pages/marketing_services.html">الخدمات التسويقية</a></li>
+                                <li><a href="pages/advertising_services.html">خدمات التصميم والحملات الإعلانية</a></li>
                             </ul>
                         </div>
                     </div>
@@ -2004,8 +2011,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <button type="button" data-bs-dismiss="modal" aria-label="Close" class="close">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                        viewBox="0 0 384 512">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
                         <path
                             d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
                     </svg>
