--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="shortcut icon" type="image/jpg" href="../imgs/fivicon.png">
     <title>سلسلة - المدوّنة</title>
 </head>
 
@@ -24,13 +24,13 @@
                             <div class="ms-4">
                                 <a href="mailto:plan@slsalah.com">
                                     <span>plan@slsalah.com</span>
-                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
+                                    <img src="../imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
                                 </a>
                             </div>
                             <div>
                                 <a href="tel:+966555881764">
                                     <span dir="ltr">+966 555 88 1764</span>
-                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
+                                    <img src="../imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
                                 </a>
                             </div>
                         </div>
@@ -41,16 +41,16 @@
                                 <i class="fa fa-whatsapp"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <img src="imgs/icons/Linked-In.svg" alt="icon">
+                                <img src="../imgs/icons/Linked-In.svg" alt="icon">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="icon">
+                                <img src="../imgs/icons/icons8-twitterx 1.svg" alt="icon">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <img src="imgs/icons/Facebook.svg" alt="icon">
+                                <img src="../imgs/icons/Facebook.svg" alt="icon">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/Instagram.svg" alt="icon">
+                                <img src="../imgs/icons/Instagram.svg" alt="icon">
                             </a>
                         </div>
                     </div>
@@ -61,19 +61,19 @@
                         aria-label="Toggle navigation">
                         <span class="fa fa-bars"></span>
                     </button>
-                    <a class="navbar-brand d-block d-lg-none" href="index.html">
-                        <img src="./imgs/logo.png" alt="logo">
+                    <a class="navbar-brand d-block d-lg-none" href="../index.html">
+                        <img src="../imgs/logo.png" alt="logo">
                     </a>
-                    <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
+                    <a class="nav-link d-none d-lg-block" href="../index.html#testimonial">
                         <button class="ask-request">اطلب استشارة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئيسية</a>
+                                <a class="nav-link" aria-current="page" href="../index.html">الصفحة الرئيسية</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="who-we-ara.html">من نحن</a>
+                                <a class="nav-link" href="./who_we_ara.html">من نحن</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown"
@@ -92,18 +92,19 @@
                                 <ul class="dropdown-menu">
                                     <li>
                                         <a class="d-flex align-items-center dropdown-item"
-                                            href="financial consulting.html">
-                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/حلول مالية وادارية.svg"
+                                            href="./financial_consulting.html">
+                                            <img src="../imgs/ايقونات الخدمات في شريط الهيدر/حلول مالية وادارية.svg"
                                                 alt="icon">
                                             الاستشارات والحلول الإدارية و المالية
                                         </a>
-                                        <a class="d-flex align-items-center dropdown-item" href="legal advice.html">
-                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الاستشارات والحلول القانونية.svg"
+                                        <a class="d-flex align-items-center dropdown-item" href="./legal_advice.html">
+                                            <img src="../imgs/ايقونات الخدمات في شريط الهيدر/الاستشارات والحلول القانونية.svg"
                                                 alt="icon">
                                             الاستشارات والحلول القانونية
                                         </a>
-                                        <a class="d-flex align-items-center dropdown-item" href="human consulting.html">
-                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/استشارات الموارد البشرية.svg"
+                                        <a class="d-flex align-items-center dropdown-item"
+                                            href="./human_consulting.html">
+                                            <img src="../imgs/ايقونات الخدمات في شريط الهيدر/استشارات الموارد البشرية.svg"
                                                 alt="icon">
                                             استشارات الموارد
                                             البشرية
@@ -111,30 +112,30 @@
                                     </li>
                                     <li>
                                         <a class="d-flex align-items-center dropdown-item"
-                                            href="technical consulting.html">
-                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الخدمات التقنية.svg"
+                                            href="./technical_consulting.html">
+                                            <img src="../imgs/ايقونات الخدمات في شريط الهيدر/الخدمات التقنية.svg"
                                                 alt="icon">
                                             الاستشارات
                                             والحلول
                                             التقنية
                                         </a>
                                         <a class="d-flex align-items-center dropdown-item"
-                                            href="marketing consulting.html">
-                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/ايقونة الاستشارات والحلول التسويقية.svg"
+                                            href="./marketing_consulting.html">
+                                            <img src="../imgs/ايقونات الخدمات في شريط الهيدر/ايقونة الاستشارات والحلول التسويقية.svg"
                                                 alt="icon">
                                             الاستشارات والحلول التسويقية
                                         </a>
                                         <a class="d-flex align-items-center dropdown-item"
-                                            href="marketing services.html">
-                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/خدمات تسويقية.svg"
+                                            href="./marketing_services.html">
+                                            <img src="../imgs/ايقونات الخدمات في شريط الهيدر/خدمات تسويقية.svg"
                                                 alt="icon">
                                             الخدمات التسويقية
                                         </a>
                                     </li>
                                     <li>
                                         <a class="d-flex align-items-center dropdown-item"
-                                            href="advertising services.html">
-                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/التصميم والحملات الاعلانية.svg"
+                                            href="./advertising_services.html">
+                                            <img src="../imgs/ايقونات الخدمات في شريط الهيدر/التصميم والحملات الاعلانية.svg"
                                                 alt="icon">
                                             خدمات التصميم والحملات الإعلانية
                                         </a>
@@ -148,9 +149,9 @@
                                 <a class="nav-link active" href="blog.html">المدونة</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact-us.html">اتصل بنا</a>
+                                <a class="nav-link" href="./contact_us.html">اتصل بنا</a>
                             </li>
-                            <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
+                            <a class="nav-link d-block d-lg-none" href="../index.html#testimonial">
                                 <button class="ask-request">اطلب استشارة</button>
                             </a>
                             <div
@@ -160,22 +161,22 @@
                                     <i class="fa fa-whatsapp"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                    <img src="imgs/icons/Linked-In.svg" alt="icon">
+                                    <img src="../imgs/icons/Linked-In.svg" alt="icon">
                                 </a>
                                 <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                    <img src="imgs/icons/icons8-twitterx 1.svg" alt="icon">
+                                    <img src="../imgs/icons/icons8-twitterx 1.svg" alt="icon">
                                 </a>
                                 <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                    <img src="imgs/icons/Facebook.svg" alt="icon">
+                                    <img src="../imgs/icons/Facebook.svg" alt="icon">
                                 </a>
                                 <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                    <img src="imgs/icons/Instagram.svg" alt="icon">
+                                    <img src="../imgs/icons/Instagram.svg" alt="icon">
                                 </a>
                             </div>
                         </ul>
                     </div>
-                    <a class="navbar-brand d-none d-lg-block" href="index.html">
-                        <img src="./imgs/logo.png" alt="logo">
+                    <a class="navbar-brand d-none d-lg-block" href="../index.html">
+                        <img src="../imgs/logo.png" alt="logo">
                     </a>
                 </nav>
             </div>
@@ -372,7 +373,7 @@
             <div class="row justify-content-between gy-4">
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="footer-block">
-                        <img src="imgs/logo.png" alt="logo" class="img-fluid logo">
+                        <img src="../imgs/logo.png" alt="logo" class="img-fluid logo">
                         <p>شركة سلسلة هي أول شركة سعودية من نوعها في السوق السعودي</p>
                         <div class="media d-flex align-items-center">
                             <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
@@ -380,16 +381,16 @@
                                 <i class="fa fa-whatsapp"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <img src="imgs/icons/Linked-In.svg" alt="">
+                                <img src="../imgs/icons/Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
+                                <img src="../imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <img src="imgs/icons/footer-facebook.svg" alt="">
+                                <img src="../imgs/icons/footer-facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/Instagram.svg" alt="">
+                                <img src="../imgs/icons/Instagram.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -398,10 +399,10 @@
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
-                            <li><a href="index.html">الصفحة الرئيسية</a></li>
-                            <li><a href="who-we-ara.html">من نحن</a></li>
+                            <li><a href="../index.html">الصفحة الرئيسية</a></li>
+                            <li><a href="who_we_ara.html">من نحن</a></li>
                             <li><a href="blog.html">المدونة</a></li>
-                            <li><a href="contact-us.html">اتصل بنا</a></li>
+                            <li><a href="contact_us.html">اتصل بنا</a></li>
                         </ul>
                     </div>
                 </div>
@@ -410,15 +411,15 @@
                         <h4>خدماتنا</h4>
                         <div class="d-md-flex gap-4">
                             <ul>
-                                <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
-                                <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
-                                <li><a href="human consulting.html">استشارات الموارد البشرية</a></li>
-                                <li><a href="technical consulting.html">الاستشارات والحلول التقنية</a></li>
+                                <li><a href="./financial_consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
+                                <li><a href="./legal_advice.html">الاستشارات والحلول القانونية</a></li>
+                                <li><a href="./human_consulting.html">استشارات الموارد البشرية</a></li>
+                                <li><a href="./technical_consulting.html">الاستشارات والحلول التقنية</a></li>
                             </ul>
                             <ul>
-                                <li><a href="marketing consulting.html">الاستشارات والحلول التسويقية</a></li>
-                                <li><a href="marketing services.html">الخدمات التسويقية</a></li>
-                                <li><a href="advertising services.html">خدمات التصميم والحملات الإعلانية</a></li>
+                                <li><a href="./marketing_consulting.html">الاستشارات والحلول التسويقية</a></li>
+                                <li><a href="./marketing_services.html">الخدمات التسويقية</a></li>
+                                <li><a href="./advertising_services.html">خدمات التصميم والحملات الإعلانية</a></li>
                             </ul>
                         </div>
                     </div>
@@ -429,25 +430,25 @@
                         <ul class="d-flex flex-column gy-5">
                             <li>
                                 <a href="tel:+966555881764">
-                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
+                                    <img src="../imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 555 88 1764</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="tel:+966112074129">
-                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
+                                    <img src="../imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 112 07 4129</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="mailto:contact@slsalah.com">
-                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
+                                    <img src="../imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
                                     <span>contact@slsalah.com</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
-                                    <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
+                                    <img src="../imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
                                     <span class="speciel">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق
                                         العروبة
                                         - الدور
@@ -467,9 +468,9 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 
 </body>
 
