--- a/pages/blog.html
+++ b/pages/blog.html
@@ -203,7 +203,7 @@
             </div>
             <div class="main-block">
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end one">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -219,7 +219,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end two">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -234,7 +234,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end three">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -249,7 +249,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end four">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -264,7 +264,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end five">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -279,7 +279,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end six">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -294,7 +294,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end seven">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -309,7 +309,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end eight">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -324,7 +324,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end nine">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -339,7 +339,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
+                    <a href="blog_info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end ten">
                             <button>تحليل</button>
                             <button>تسويق</button>
