--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
 
     <section id="services">
-        <div class="container">
+        <div class="container-fluid">
             <div class="header-content">
                 <h3 data-aos="fade-up">الخدمات</h3>
                 <p data-aos="fade-up">بفضل خبرتنا الواسعة والمتنوعة، نقدم مجموعة متنوعة من الخدمات التي تلبي <br
@@ -376,8 +376,8 @@
                     واحترافية.
                 </p>
             </div>
-            <div class="row gy-4">
-                <div class="col-lg-4 col-md-6 col-12">
+            <div class="main-services-block">
+                <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -451,7 +451,7 @@
                             tristique, nec malesuada elit</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -509,7 +509,7 @@
                             tristique, nec malesuada elit</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -599,7 +599,7 @@
                             tristique, nec malesuada elit</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -681,7 +681,7 @@
                             tristique, nec malesuada elit</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -720,7 +720,7 @@
                             tristique, nec malesuada elit</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -1313,7 +1313,7 @@
                             tristique, nec malesuada elit</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
