--- a/index.html
+++ b/index.html
@@ -2043,7 +2043,7 @@
                 </button>
                 <div class="modal-header d-flex flex-column justify-content-center">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">احجز استشارة</h1>
-                    <p>استشارّة مجانية لمدة 30 دقيقة</p>
+                    <p>استشارة مجانية لمدة 30 دقيقة</p>
                 </div>
                 <div class="modal-body">
                     <form class="row needs-validation" novalidate style="width: 100%; margin: auto;">
