--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 واحترافية.
             </p>
         </div>
-        <div class="new-container">
+        <div class="container">
             <div class="main-services-block">
                 <div class="child-services-block">
                     <div class="service-block text-center" data-aos="fade-down-left" data-aos-duration="1000">
