chabge the img src from main.css to it-self.html

--- a/index.html
+++ b/index.html
@@ -1910,8 +1910,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="top position-relative">
-                        <div>
+                    <div class="position-relative">
+                        <img src="imgs/blog-top-bg.webp" class="top img-fluid" alt="img">
+                        <div class="btns">
                             <button>تحليل</button>
                             <button>تسويق</button>
                         </div>
