change the slider moving

--- a/index.html
+++ b/index.html
@@ -25,27 +25,30 @@
 </head>
 
 <body>
-
-
-    <div class="swiper mySwiper layer-for-header-slider header">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <img src="imgs/home-page-1.webp" alt="img" class="img-fluid">
-                <h1>من المملكة موطن الرّيادة ورمز الطموح</h1>
-            </div>
-            <div class="swiper-slide">
-                <img src="imgs/home-page-2.webp" alt="img" class="img-fluid">
-                <h1>إلى رائدي الأعمال أصحاب الرّؤى وفكر التطوير</h1>
-            </div>
-            <div class="swiper-slide">
-                <img src="imgs/home-page-3.webp" alt="img" class="img-fluid">
-                <h1>سلسلة معكم لتحقيق الرؤية وتحويلها إلى واقع</h1>
-            </div>
+    <div class="slide-wrapper">
+        <div class="line"></div>
+        <input type="radio" name="slider" id="slider1" checked class="slider-input">
+        <label class="label-slider" for="slider1">
+            <span></span>
+        </label>
+        <div class="slide-slide slide1 heading">
+            <h1>من المملكة موطن الرّيادة <br class="d-block d-md-none"> ورمز الطموح</h1>
         </div>
-        <div class="swiper-pagination number-of-sliders z-index-999">
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
+
+        <input type="radio" name="slider" id="slider2" class="slider-input">
+        <label class="label-slider" for="slider2">
+            <span></span>
+        </label>
+        <div class="slide-slide slide2 heading">
+            <h1>إلى رائدي الأعمال أصحاب الرّؤى <br class="d-block d-md-none"> وفكر التطوير</h1>
+        </div>
+
+        <input type="radio" name="slider" id="slider3" class="slider-input">
+        <label class="label-slider" for="slider3">
+            <span></span>
+        </label>
+        <div class="slide-slide slide3 heading">
+            <h1>سلسلة معكم لتحقيق الرؤيا <br class="d-block d-md-none"> وتحويلها إلى واقع</h1>
         </div>
     </div>
 
