--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <span></span>
         </label>
         <div class="slide-slide slide2 heading">
-            <h1>إلى رائدي الأعمال أصحاب الرّؤى <br class="d-block d-md-none"> وفكر التطوير</h1>
+            <h1>إلى رائدي الأعمال أصحاب <br class="d-block d-md-none">الرّؤى وفكر التطوير</h1>
         </div>
 
         <input type="radio" name="slider" id="slider3" class="slider-input">
@@ -48,7 +48,7 @@
             <span></span>
         </label>
         <div class="slide-slide slide3 heading">
-            <h1>سلسلة معكم لتحقيق الرؤيا <br class="d-block d-md-none"> وتحويلها إلى واقع</h1>
+            <h1>سلسلة معكم لتحقيق <br class="d-block d-md-none">الرؤيا وتحويلها إلى واقع</h1>
         </div>
     </div>
 
