--- a/pages/blog_info.html
+++ b/pages/blog_info.html
@@ -277,7 +277,7 @@
                             class="d-none-d-lg-block">المنافسين ؟</li>
                 </ul>
                 <p data-aos="fade-down" data-aos-duration="1000">قد يهمك : كيفية حساب الربح والخسارة لمشروع صغير</p>
-                <img src="../imgs/info-blog-img.png" class="img-fluid col-12 info-blog-img-2" alt="img"
+                <img src="../imgs/info-blog-img.webp" class="img-fluid col-12 info-blog-img-2" alt="img"
                     data-aos="fade-down" data-aos-duration="1000">
                 <p class="mt-5 mb-3" data-aos="fade-down" data-aos-duration="1000">ثانياً – دراسة النواحي الفنية للمشروع
                 </p>
