--- a/pages/who_we_ara.html
+++ b/pages/who_we_ara.html
@@ -513,6 +513,7 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/animateTheImages.js"></script>
 
 </body>
 
