--- a/index.html
+++ b/index.html
@@ -1667,8 +1667,9 @@
                                 </svg>
                             </label>
                             <div class="flag-input">
-                                <input style="text-align: left; padding-left: 70px;" type="number" class="form-control"
-                                    id="validationCustom01" value="" placeholder="12345678952" required>
+                                <input style="text-align: left; padding-left: 70px; padding-top: 18px;" type="number"
+                                    class="form-control" id="validationCustom01" value="" placeholder="12345678952"
+                                    required>
                                 <img src="imgs/icons/Saudi-Arabia-Flag.png" class="img-fluid" alt="flag">
                             </div>
                             <div class="valid-feedback mt-2 ">
@@ -1766,6 +1767,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="./js/forHeaderSlider.js"></script>
 
 </body>
 
