--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>سلسلة - الصفحة الرئيسية</title>
     <style>
         bdoy{
-            bacbground: #ccc;
+            background: #ccc;
             display: grid;
             place-imtes: center;
             place-content: center;
@@ -27,7 +27,9 @@
 </head>
 
 <body>
-    <h1>https://slsalah.com/</h1>
+    <a href="https://slsalah.com/">
+        <h1>slsalah.com/</h1>
+    <a/>
 </body>
 
 </html>
